--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
 html, body {
-    margin: 0;
-    padding: 0;
-    user-select: none;
-    touch-action: none;
-    -webkit-user-select: none;
-  }
-  canvas {
-    display: block;
-  }
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  user-select: none;
+  touch-action: none;
+  -webkit-user-select: none;
+}
+canvas {
+  display: block;
+}
