--- a/style.css
+++ b/style.css
@@ -5,7 +5,9 @@ html, body {
   user-select: none;
   touch-action: none;
   -webkit-user-select: none;
+  background: #192a56;
 }
 canvas {
   display: block;
+  margin: auto;
 }
